Fix month view collapsing in Chrome

--- a/src/less/month.less
+++ b/src/less/month.less
@@ -33,8 +33,6 @@
 .rbc-month-view {
   position: relative;
   border: 1px solid @calendar-border;
-  display: flex;
-  flex-direction: column;
   flex: 1 0 0;
   width: 100%;
   user-select: none;
